--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18"
   },
+  "proxy":"https://tunetrackerserver.cyclic.app/",
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
